Add community, downloads, and resources sections
Introduces new documentation pages for community, downloads, and resources. Updates navigation in index.html and src/app.js to include dropdown menus for Documentation, Community, and Resources, and implements dropdown menu styles and interactivity in src/index-base.css and src/app.js.

--- a/index.html
+++ b/index.html
@@ -24,20 +24,52 @@
 
             <nav class="header-nav">
                 <a href="#" class="nav-item">Learn</a>
-                <a href="#" class="nav-item dropdown">
-                    Documentation
-                    <span class="dropdown-arrow">▼</span>
-                </a>
-                <a href="#" class="nav-item">Downloads</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="dropdown-toggle">
+                        Documentation
+                        <span class="dropdown-arrow">▼</span>
+                    </a>
+                    <div class="dropdown-menu">
+                        <a href="#docs/introduction.md" class="dropdown-item">Introduction</a>
+                        <a href="#docs/installation.md" class="dropdown-item">Installation</a>
+                        <a href="#docs/quick-start.md" class="dropdown-item">Quick Start</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#docs/api/overview.md" class="dropdown-item">API Reference</a>
+                        <a href="#docs/guides/basic-usage.md" class="dropdown-item">Guides</a>
+                        <a href="#docs/lexical.md" class="dropdown-item">Language Reference</a>
+                    </div>
+                </div>
+                <a href="#docs/downloads/index.md" class="nav-item">Downloads</a>
                 <a href="#" class="nav-item">Packages</a>
-                <a href="#" class="nav-item dropdown">
-                    Community
-                    <span class="dropdown-arrow">▼</span>
-                </a>
-                <a href="#" class="nav-item dropdown">
-                    Resources
-                    <span class="dropdown-arrow">▼</span>
-                </a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="dropdown-toggle">
+                        Community
+                        <span class="dropdown-arrow">▼</span>
+                    </a>
+                    <div class="dropdown-menu">
+                        <a href="#docs/community/index.md" class="dropdown-item">Community Hub</a>
+                        <a href="#docs/community/forums.md" class="dropdown-item">Discussion Forums</a>
+                        <a href="#docs/community/chat.md" class="dropdown-item">Chat & Support</a>
+                        <a href="#docs/community/events.md" class="dropdown-item">Events & Meetups</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#docs/community/contributing.md" class="dropdown-item">Contributing</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown">
+                    <a href="#" class="dropdown-toggle">
+                        Resources
+                        <span class="dropdown-arrow">▼</span>
+                    </a>
+                    <div class="dropdown-menu">
+                        <a href="#docs/resources/index.md" class="dropdown-item">All Resources</a>
+                        <a href="#" class="dropdown-item">Tutorials</a>
+                        <a href="#" class="dropdown-item">Tools & IDEs</a>
+                        <a href="#" class="dropdown-item">Third-party Libraries</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item">Blog</a>
+                        <a href="#" class="dropdown-item">Newsletter</a>
+                    </div>
+                </div>
             </nav>
 
             <div class="header-right">
