--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </aside>
     </div>
 
-    <script src="src/app.js"></script>
+    <script type="module" src="src/app.js"></script>
 </body>
 
 </html>
