--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dream Programming Language Documentation</title>
+    <title>Your Project Documentation</title>
     <link rel="stylesheet" href="src/index.css" id="theme-css">
     <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
@@ -18,8 +18,8 @@
     <header class="header-bar">
         <div class="header-content">
             <div class="logo-section">
-                <div class="logo">D²</div>
-                <span class="logo-text">Dream Language</span>
+                <div class="logo">🚀</div>
+                <span class="logo-text">Your Project</span>
             </div>
 
             <nav class="header-nav">
