Remove emojis and add template variables for professionalism
Replaced all emoji icons in documentation, scripts, and UI with clean text or template variables for a more professional appearance. Updated all documentation and configuration files to use template variables (e.g., {{PROJECT_NAME}}, {{PROJECT_DESCRIPTION}}) for maximum reusability. Added TEMPLATE_READY.md to summarize the conversion. Cleaned up console output and test messages, and updated default logos and theme toggles to use text instead of emojis.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <option>English</option>
                     </select>
                 </div>
-                <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+                <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
             </div>
         </div>
     </header>
